--- a/style.css
+++ b/style.css
@@ -47,6 +47,52 @@ body {
     padding: 36px;
     margin: 24px 326px;
     font-size: 36px;
+    z-index: 300;
+}
+
+.splash {
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    z-index: 200;
+    margin: 0;
+    padding: 0;
+    opacity: 1;
+    transition: opacity 1s;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    backdrop-filter: blur(32px);
+}
+
+.splash.fadeOut {
+    opacity: 0;
+    z-index: -300;
+}
+
+.play {
+    height: 64px;
+    width: 528px;
+    flex: 0;
+    user-select: none;
+
+    font-size: 42px;
+    text-align: center;
+    padding: 16px 16px 16px 16px;
+    transition: transform 0.15s, box-shadow 0.4s;
+}
+
+.play:hover {
+    box-shadow: 0 0 12px 12px #0eefffab;
+    transform: translateY(-6px);
+    cursor: pointer;
+}
+
+.play:active {
+    opacity: 0;
+    z-index: inherit
 }
 
 .content-main {
@@ -59,15 +105,14 @@ body {
 }
 
 .selector {
-    display: flex;
-    flex-direction: column;
     margin-left: 48px;
     margin-right: 48px;
     box-shadow: 0 0 12px 4px #045b7d4d;
+    min-width: 112px;
     width: 112px;
     height: 128px;
     padding: 12px;
-    transition: 0.4s, box-shadow 0.1s;
+    transition: 0.35s, box-shadow 0.05s;
 }
 
 .selector img {
@@ -78,11 +123,11 @@ body {
 .selector:hover {
     cursor: pointer;
     box-shadow: 0 0 12px 12px #dddddd4d;
-    width: 122px;
-    height: 138px;
+    width: 128px;
+    height: 144px;
 }
 
 .selector:active {
     box-shadow: 0 0 12px 8px #0eefffab;
-    transform: translateY(2px);
+    transform: translateY(3px);
 }
