adjustments to z-index transition
moved z-index no longer hides my cool overly slow transition animation

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
     margin: 0;
     padding: 0;
     opacity: 1;
-    transition: opacity 1s;
+    transition: 2.45s;
 
     display: flex;
     flex-direction: column;
