--- a/style.css
+++ b/style.css
@@ -27,6 +27,18 @@ body {
     z-index: -100;
 }
 
+#fadeOut {
+    opacity: 0; 
+    z-index:-1; 
+    transition: opacity 1.8s, z-index 2.5s
+}
+
+#fadeIn {
+    opacity: 1; 
+    z-index: 1; 
+    transition: opacity 1.8s, z-index 2.5s 
+}
+
 .overlay {
     position: absolute;
     top: 0;
@@ -55,7 +67,7 @@ body {
     position: fixed;
     height: 100vh;
     width: 100%;
-    z-index: 200;
+    z-index: 2;
     margin: 0;
     padding: 0;
     opacity: 1;
@@ -66,11 +78,6 @@ body {
     align-items: center;
     justify-content: space-around;
     backdrop-filter: blur(32px);
-}
-
-.splash.fadeOut {
-    opacity: 0;
-    z-index: -300;
 }
 
 .play {
@@ -153,3 +160,4 @@ body {
     border-top: white 1px solid;
     border-radius: 4px;
 }
+
