--- a/style.css
+++ b/style.css
@@ -30,14 +30,16 @@ body {
 
 #fadeOut {
     opacity: 0; 
-    z-index:-1; 
-    transition: opacity 2.2s, z-index 2.5s;
+    z-index:-500; 
+    transition: opacity 2.2s, z-index 3.2s;
+    transition-timing-function: ease-out;
 }
 
 #fadeIn {
     opacity: 1; 
-    z-index: 1; 
-    transition: opacity 2.2s, z-index 2.5s;
+    z-index: 500; 
+    transition: opacity 2.2s, z-index 3.2s;
+    transition-timing-function: ease-out;
 }
 
 .overlay {
@@ -122,8 +124,6 @@ body {
     width: 112px;
     height: 128px;
     padding: 12px;
-    transition: 0.35s, box-shadow 0.05s, transform 0.1s;
-
     opacity: 0;
 }
 
@@ -135,8 +135,6 @@ body {
 .selector:hover {
     cursor: pointer;
     box-shadow: 0 0 12px 12px #dddddd4d;
-    width: 128px;
-    height: 144px;
 }
 
 .selector:active {
