--- a/style.css
+++ b/style.css
@@ -31,14 +31,14 @@ body {
 #fadeOut {
     opacity: 0; 
     z-index:-500; 
-    transition: opacity 2.2s, z-index 3.2s;
-    transition-timing-function: ease-out;
+    transition: opacity 1.6s, z-index 5s;
+    transition-timing-function: ease-in;
 }
 
 #fadeIn {
     opacity: 1; 
     z-index: 500; 
-    transition: opacity 2.2s, z-index 3.2s;
+    transition: opacity 1.6s, z-index 3.2s;
     transition-timing-function: ease-out;
 }
 
